--- a/problems.html
+++ b/problems.html
@@ -1,3 +1,8 @@
+
+<!DOCTYPE html>
+<html>
+<body>
+  
 <p><a href="https://cs50.harvard.edu/python/2022/psets/2/"> Problem set 2</a> </p>
 
 <p><a href="https://cs50.harvard.edu/python/2022/psets/2/camel/"> <b> camel.py </b> </a> </p>
@@ -478,4 +483,7 @@ the same problem, the toy would simply display the correct answer (e.g., <code c
 </code></pre></div>    </div>
   </li>
 </ul></details>
+
+</body>
+</html>
 
